@@ -48,7 +48,7 @@ public class FileResource
 
     public static final String DEFAULT_CONTENT_TYPE = MimeTypeUtils.APPLICATION_OCTET_STREAM_VALUE;
 
-    public static final Set<String> IMAGE_CONTENT_TYPES = ImmutableSet.of( "image/jpg", "image/png", "image/jpeg" );
+    public static final Set<String> IMAGE_CONTENT_TYPES = Set.of( "image/jpg", "image/png", "image/jpeg" );
 
     /**
      * MIME type.
@@ -85,7 +85,7 @@ public class FileResource
     /**
      * To keep track of those files which are not pre-generated and need to be
      * processed later. Flag will be set to true for FileResource having more
-     * than one file associated with it (e.g images)
+     * than one file associated with it (e.g. images)
      */
     private boolean hasMultipleStorageFiles;
 
